[gd_scene load_steps=22 format=3 uid="uid://fo1x20ewfiw8"]

[ext_resource type="FontFile" uid="uid://bl0f2csh2wd2l" path="res://assets/fonts/DungeonFont.ttf" id="1_2ey2a"]
[ext_resource type="Script" path="res://scripts/battle.gd" id="1_ogh5i"]
[ext_resource type="Script" path="res://scripts/battle_ui.gd" id="2_06lu2"]
[ext_resource type="FontFile" uid="uid://dalt11g8b1g2k" path="res://assets/fonts/Kitchen Sink.ttf" id="4_ply01"]
[ext_resource type="Texture2D" uid="uid://cep5ej2435hik" path="res://assets/minota.png" id="5_mm37a"]
[ext_resource type="Shader" path="res://scripts/shaders/melt.gdshader" id="5_wwnh4"]
[ext_resource type="Texture2D" uid="uid://bnxw0e4ir0pg" path="res://assets/sprites/slime.png" id="6_v2rec"]
[ext_resource type="Script" path="res://scripts/camera.gd" id="7_lmkk5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a11u7"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c73m3"]
shader = ExtResource("5_wwnh4")
shader_parameter/progress = 0.0
shader_parameter/meltiness = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_qd3wb"]
font = ExtResource("1_2ey2a")
font_size = 48

[sub_resource type="FontVariation" id="FontVariation_da2hc"]
base_font = ExtResource("1_2ey2a")
variation_transform = Transform2D(1, 0.2, 0, 1, 0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_rg4p4"]
font = ExtResource("4_ply01")
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_71kic"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aaem2"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nbsp3"]
bg_color = Color(0.388235, 0.866667, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_melst"]
font = ExtResource("4_ply01")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_i545t"]
font = ExtResource("4_ply01")
font_size = 24
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tr28y"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.737193, 0.737193, 0.737193, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_v7ekf"]
particle_flag_disable_z = true
angle_min = 1.07288e-05
angle_max = 1.07288e-05
direction = Vector3(0, 1, 0)
spread = 20.0
initial_velocity_max = 35.0
gravity = Vector3(0, 98, 0)
scale_min = 5.0
scale_max = 8.0

[sub_resource type="AudioStreamPolyphonic" id="AudioStreamPolyphonic_wto6v"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_ogh5i")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Main" type="Control" parent="UI"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_06lu2")

[node name="Panel" type="Panel" parent="UI/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = -544.0
offset_right = 312.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a11u7")

[node name="EnemyTexture" type="TextureRect" parent="UI/Main/Panel"]
texture_filter = 1
material = SubResource("ShaderMaterial_c73m3")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -192.0
offset_right = 256.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_v2rec")

[node name="Title" type="Label" parent="UI/Main"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -296.0
offset_top = 618.0
offset_right = 280.0
offset_bottom = 719.0
grow_horizontal = 2
text = "You died in the forest, your adventure is done."
label_settings = SubResource("LabelSettings_qd3wb")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Level" type="RichTextLabel" parent="UI/Main"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -616.0
offset_right = 320.0
offset_bottom = -564.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("1_2ey2a")
theme_override_fonts/italics_font = SubResource("FontVariation_da2hc")
theme_override_font_sizes/bold_italics_font_size = 42
theme_override_font_sizes/italics_font_size = 42
theme_override_font_sizes/mono_font_size = 42
theme_override_font_sizes/normal_font_size = 51
theme_override_font_sizes/bold_font_size = 42
bbcode_enabled = true
text = "Level 0"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="LevelText" type="Label" parent="UI/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -528.0
offset_right = 296.0
offset_bottom = -464.0
grow_horizontal = 2
grow_vertical = 2
text = "0/10"
label_settings = SubResource("LabelSettings_rg4p4")
horizontal_alignment = 2
vertical_alignment = 1

[node name="EnemyHealthProgressBar" type="ProgressBar" parent="UI/Main"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = 30.0
offset_right = 240.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_71kic")
theme_override_styles/fill = SubResource("StyleBoxFlat_aaem2")
value = 100.0
show_percentage = false

[node name="HealthProgressBar" type="ProgressBar" parent="UI/Main"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = 123.0
offset_right = 312.0
offset_bottom = 159.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_71kic")
theme_override_styles/fill = SubResource("StyleBoxFlat_aaem2")
value = 100.0
show_percentage = false

[node name="MagicProgressBar" type="ProgressBar" parent="UI/Main"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = 172.0
offset_right = 312.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_71kic")
theme_override_styles/fill = SubResource("StyleBoxFlat_nbsp3")
value = 100.0
show_percentage = false

[node name="HP" type="Label" parent="UI/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1606.0
offset_top = 114.0
offset_right = 1110.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
text = "April growing the hugest fattest pair of bouncing gazongas you've ever seen in your life and just straight flip flopping them all over the place:
"
label_settings = SubResource("LabelSettings_melst")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HP2" type="Label" parent="UI/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 115.0
offset_right = 136.0
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2
text = "HP"
label_settings = SubResource("LabelSettings_i545t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MP" type="Label" parent="UI/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -316.0
offset_top = 162.0
offset_right = -180.0
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 2
text = "100/100"
label_settings = SubResource("LabelSettings_melst")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MP2" type="Label" parent="UI/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 163.0
offset_right = 136.0
offset_bottom = 219.0
grow_horizontal = 2
grow_vertical = 2
text = "MP"
label_settings = SubResource("LabelSettings_i545t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyOutline" type="Panel" parent="UI/Main"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = -464.0
offset_right = 248.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tr28y")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(360, 384)
scale = Vector2(10, 10)
texture = ExtResource("5_mm37a")
process_material = SubResource("ParticleProcessMaterial_v7ekf")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("7_lmkk5")

[node name="PlayerTimer" type="Timer" parent="."]
autostart = true

[node name="EnemyTimer" type="Timer" parent="."]
process_priority = 1
autostart = true

[node name="MagicTimer" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamPolyphonic_wto6v")

[connection signal="mouse_entered" from="UI/Main/Panel/EnemyTexture" to="." method="_on_enemy_texture_mouse_entered"]
[connection signal="mouse_exited" from="UI/Main/Panel/EnemyTexture" to="." method="_on_enemy_texture_mouse_exited"]
[connection signal="timeout" from="PlayerTimer" to="." method="_on_player_timer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="MagicTimer" to="." method="_on_misc_timer_timeout"]
